FIX: installer-name typo

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,6 @@
         "email": "jeremy@burnbright.net"
     }],
     "extra": {
-        "installer-name": "organisations"
+        "installer-name": "percentagefield"
     }
 }
